[metadata]
name = Some pre commit hooks
version = 1.0.0+pre_commit
description = Some hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sonic-net/sonic-mgmt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
package_dir =
    =.hooks
install_requires =
    ruamel.yaml>=0.15
    tomli>=1.1.0;python_version<"3.11"
python_requires = >=3.7

[options.packages.find]
where = .hooks
exclude =
    spytest*

[options.entry_points]
console_scripts =
    check-conditional-mark-sort = pre_commit_hooks.check_conditional_mark_sort:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
