cc_library(
    name = "json",
    srcs = [
        "src/lib_json/json_reader.cpp",
        "src/lib_json/json_value.cpp",
        "src/lib_json/json_writer.cpp",
    ],
    hdrs = glob(["include/json/*.h"]) + [
        "src/lib_json/json_tool.h",
    ],
    includes = ["include"],
    textual_hdrs = [
        "src/lib_json/json_valueiterator.inl",
    ],
    visibility = ["//visibility:public"],
    alwayslink = True,
)
