# Copyright (c) 2024, Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

go_library(
    name = "thinkit",
    testonly = True,
    srcs = ["thinkit.go"],
    cgo = True,
    importpath = "github.com/sonic-net/sonic-mgmt/sdn_tests/pins_ondatra/infrastructure/thinkit/thinkit",
    deps = [
        "//infrastructure/binding:pinsbind",
        "@com_github_golang_glog//:glog",
        "@com_github_openconfig_gnmi//errlist",
        "@com_github_openconfig_ondatra//binding",
        "@com_github_openconfig_ondatra//proto:go_default_library",
        "@com_github_openconfig_ondatra//proxy",
        "@com_github_openconfig_ondatra//proxy/proto/reservation:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/local",
        "@org_golang_google_protobuf//proto",
    ],
)

go_binary(
    name = "thinkit_cgo",
    testonly = True,
    embed = [":thinkit"],
    linkmode = "c-archive",
)

cc_library(
    name = "cthinkit",
    testonly = True,
    srcs = ["thinkit.cc"],
    hdrs = ["thinkit.h"],
    deps = [
        ":thinkit_cgo.cc",
        "@com_github_sonic_net_sonic_pins//gutil:status",
        "@com_github_openconfig_ondatra//proto:ondatra_cc_proto",
        "@com_github_openconfig_ondatra//proxy/proto:reservation_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/time",
        "@com_google_protobuf//:protobuf",
    ],
)
